feat: Dockerize MEAN stack app with CORS, port fixes, and service connectivity
- Updated backend to expose port 4000 and configured CORS for Angular frontend
- Updated frontend to connect with backend using localhost instead of container name
- Fixed unsafe ports issues and ensured proper API URLs in Angular services
- Configured docker-compose for multi-container setup: mongo, backend, frontend
- Verified frontend-backend-mongo connectivity and resolved ERR_CONNECTION_REFUSED errors
- Pushed images to Docker hub

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,5 +1,5 @@
 # backend/Dockerfile
-FROM node:20
+FROM node:20-alpine
 
 # Set working directory
 WORKDIR /app
@@ -14,7 +14,7 @@ RUN npm install
 COPY . .
 
 # Expose port
-EXPOSE 5000
+EXPOSE 6000
 
 # Start the server
 CMD ["npm", "start"]
